--- a/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
+++ b/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "kss7vquztn5742emuo3m",
-   "authorId": "350843732387",
-   "authorName": "JOHN",
-   "authorEmail": "jeremiah.hansen@snowflake.com",
-   "sessionId": "d322f813-fe43-46ce-a12e-8f6586bfa9bf",
-   "lastEditTime": 1744841249680
+   "notebookId": "vxyj4qjwykq6dsqrwqbj",
+   "authorId": "603078220582",
+   "authorName": "CWIESE",
+   "authorEmail": "christoph.wiese@snowflake.com",
+   "sessionId": "a9c436aa-5306-47f6-99d2-85b3e7c6cffa",
+   "lastEditTime": 1748463401096
   }
  },
  "nbformat_minor": 5,
@@ -110,6 +110,15 @@
    "outputs": [],
    "source": "SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f19122f-7a3d-478c-a4d0-28eafa70d279",
+   "metadata": {
+    "name": "cell1",
+    "collapsed": false
+   },
+   "source": "# Dummy"
   }
  ]
 }
